# 21C1-Rusticos2

./: .gitignore  Cargo.toml  README.md  datos  log  miBaseDeDatos.rdb  tiburoncin
Diagramas/: clases.plantuml  clases.puml  clientes.puml  comandos_pos_ref.plantuml  comandos_pre_ref.plantuml  observer.puml
resources/: index.html  redis.conf  style.css  test.html
src/: BaseDeDatos.rs  base_de_datos.rs  canal.rs  cliente.rs  cliente_http.rs  cliente_redis.rs  comando.rs  comando_http.rs  comando_info.rs  comando_key_handler.rs  comando_list_handler.rs  comando_nulo_handler.rs  comando_pubsub_handler.rs  comando_server_handler.rs  comando_set_handler.rs  comando_string_handler.rs  config.rs  http_parser.rs  log_handle.rs  log_handler.rs  main.rs  observer.rs  parser.rs  persistencia.rs  redis.rs  redis_error.rs  valor.rs
tests/: integracion.rs  key_test.rs  list_test.rs  pubsub_test.rs  set_test.rs  string_test.rs
