[package]
name = "proyecto_taller_1"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "redis-server"
path = "src/main.rs"

[[bin]]
name = "integracion"
path = "tests/integracion.rs"

[dependencies.redis]
version = "*"
